Killed off predis

--- a/src/Illuminate/Redis/composer.json
+++ b/src/Illuminate/Redis/composer.json
@@ -15,6 +15,7 @@
     ],
     "require": {
         "php": "^7.2",
+        "ext-redis": "*",
         "illuminate/contracts": "^7.0",
         "illuminate/support": "^7.0"
     },
@@ -22,10 +23,6 @@
         "psr-4": {
             "Illuminate\\Redis\\": ""
         }
-    },
-    "suggest": {
-        "ext-redis": "Required to use the phpredis connector.",
-        "predis/predis": "Required to use the predis connector (^1.0)."
     },
     "extra": {
         "branch-alias": {
